# mlperf-lite-benchmarks

./: .gitignore  .pre-commit-config.yaml  PROJECT_SUMMARY.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: bert_sst2.yaml  resnet_cifar10.yaml  unet_segmentation.yaml
docs/: index.md
docs/getting-started/: installation.md  quick-start.md
src/mlperf_lite/: __init__.py  cli.py
src/mlperf_lite/benchmarks/: __init__.py  metrics.py  runner.py  trainer.py
src/mlperf_lite/datasets/: __init__.py  base.py  cifar10.py  factory.py  sst2.py
src/mlperf_lite/models/: __init__.py  base.py  bert.py  factory.py  resnet.py  unet.py
src/mlperf_lite/monitoring/: __init__.py  energy.py  hardware.py  system.py
src/mlperf_lite/reporting/: __init__.py  plots.py  report_generator.py
src/mlperf_lite/utils/: __init__.py  config.py  logging.py  system_info.py
tests/: __init__.py  test_config.py  test_datasets.py  test_models.py
